--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   jupyterlab:
-    image: imamcs/ubig1-jupyterlab
+    image: imamcs/ubig1-jupyterlab:latest
     container_name: jupyterlab
     ports:
       - 8888:8888
@@ -31,7 +31,7 @@ services:
     volumes:
       - shared-workspace:/opt/workspace
   spark-master:
-    image: imamcs/ubig1-spark-master
+    image: imamcs/ubig1-spark-master:latest
     container_name: spark-master
     ports:
       - 8080:8080
@@ -39,7 +39,7 @@ services:
     volumes:
       - shared-workspace:/opt/workspace
   spark-worker-1:
-    image: imamcs/ubig1-spark-worker
+    image: imamcs/ubig1-spark-worker:latest
     container_name: spark-worker-1
     environment:
       - SPARK_WORKER_CORES=1
@@ -51,7 +51,7 @@ services:
     depends_on:
       - spark-master
   spark-worker-2:
-    image: imamcs/ubig1-spark-worker
+    image: imamcs/ubig1-spark-worker:latest
     container_name: spark-worker-2
     environment:
       - SPARK_WORKER_CORES=1
