--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,19 @@ volumes:
     name: "hadoop-distributed-file-system"
     driver: local
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: 54.208.1.149
-      KAFKA_ZOOKEEPER_CONNECT: 54.208.1.149:2181
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+#   zookeeper:
+#     image: wurstmeister/zookeeper
+#     ports:
+#       - "2181:2181"
+#   kafka:
+#     image: wurstmeister/kafka
+#     ports:
+#       - "9092:9092"
+#     environment:
+#       KAFKA_ADVERTISED_HOST_NAME: 54.208.1.149
+#       KAFKA_ZOOKEEPER_CONNECT: 54.208.1.149:2181
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock
   jupyterlab:
     image: imamcs/ubig1-jupyterlab:version1.1
     container_name: jupyterlab
